add feature that allow create and fetch one pet from db
